fix gas slider jumping around

--- a/app/styles/etherwallet-nav.less
+++ b/app/styles/etherwallet-nav.less
@@ -68,8 +68,12 @@
       }
     }
   }
-  .dropdown-toggle { font-size: 14px; padding: .4rem 1rem; }
+  .dropdown-toggle {
+    font-size: 14px;
+    padding: .4rem 1rem;
+  }
   .dropdown-gas {
+    min-width: 200px;
     display: inline-block;
     .dropdown-menu{
       min-width: 100%;
